--- a/src/components/teacher/footer/FooterContainer.sass
+++ b/src/components/teacher/footer/FooterContainer.sass
@@ -23,10 +23,6 @@
     width: 23%
 
 
-.footer-distributed h3 
-    color: #ffffff
-    margin: 5px 10px
-
 
 iframe 
     width: -webkit-fill-available
@@ -38,53 +34,6 @@ iframe
     width: 45%
 
 
-.footer-distributed .footer-center i 
-    background-color: #33383b
-    color: #ffffff
-    font-size: 25px
-    width: 38px
-    height: 38px
-    border-radius: 50%
-    text-align: center
-    line-height: 42px
-    margin: 10px 15px
-    vertical-align: middle
-
-
-.footer-distributed .footer-center i.fa-envelope 
-    font-size: 17px
-    line-height: 38px
-
-
-.footer-distributed .footer-center p 
-    display: inline-block
-    color: #ffffff
-    vertical-align: middle
-    margin: 0
-
-
-.footer-distributed .footer-center p span 
-    display: block
-    font-weight: normal
-    font-size: 14px
-    line-height: 2
-
-.footer-distributed .footer-center p a 
-    color: #e0ac1c
-    text-decoration: none
-    
-
-
-.center-container
-    min-height: 115px
-    background-image: url("codigo.gif")
-    background-size: cover
-    background-position: center
-
-
-.image-code
-    width: -webkit-fill-available
-    height: -webkit-fill-available
 
 
 .pres 
@@ -112,39 +61,6 @@ iframe
     
 
 
-.footer-distributed .footer-company-about 
-    line-height: 20px
-    color: #92999f
-    font-size: 13px
-    font-weight: normal
-    margin: 0
-
-
-.footer-distributed .footer-company-about span 
-    display: block
-    color: #ffffff
-    font-size: 18px
-    font-weight: bold
-    margin-bottom: 20px
-
-
-.footer-distributed .footer-icons 
-    margin-top: 25px
-
-
-.footer-distributed .footer-icons a 
-    display: inline-block
-    width: 35px
-    height: 35px
-    cursor: pointer
-    background-color: #33383b
-    border-radius: 2px
-    font-size: 20px
-    color: #ffffff
-    text-align: center
-    line-height: 35px
-    margin-right: 3px
-    margin-bottom: 5px
 
 
 .overlay 
@@ -177,21 +93,6 @@ iframe
     height: 70%
 
 
-
-.popup h3 
-    font-size: 36px
-    font-weight: 600
-    margin-bottom: 10px
-    opacity: 0
-
-
-.popup h4 
-    font-size: 26px
-    font-weight: 300
-    margin-bottom: 40px
-    opacity: 0
-
-
 /* ------------------------- */
 
 
@@ -208,16 +109,16 @@ iframe
     opacity: 1
 
 
-.popup.active h3 
-    animation: entradaTitulo .8s ease .5s forwards
+//.popup.active h3 
+//    animation: entradaTitulo .8s ease .5s forwards
 
 
-.popup.active h4 
-    animation: entradaSubtitulo .8s ease .5s forwards
+//.popup.active h4 
+//    animation: entradaSubtitulo .8s ease .5s forwards
 
 
-.popup.active .contenedor-inputs 
-    animation: entradaInputs 1s linear 1s forwards
+//.popup.active .contenedor-inputs 
+//    animation: entradaInputs 1s linear 1s forwards
 
 
 @keyframes entradaTitulo 
@@ -281,16 +182,18 @@ iframe
 
 
 
-.diapo-content.active 
-    width: 100%
-    top: 70px
-    transform: none
-    left: 0
+//.diapo-content.active 
+//    width: 100%
+//    top: 70px
+//    transform: none
+//    left: 0
 
 
 .btn-back i,
 .btn-next i 
-    font-size: 100
+    font-size: 100px
+
+
 .btn-back 
     left: -50px
 
@@ -315,10 +218,12 @@ iframe
     border-radius: 5px
 
 .modal-content
-    min-height:100% !important
+   min-height:100% !important
+
 
 .modal-body
-    text-align: center
+     text-align: center
+
 
 .footer-distributed .footer-right .div_audio
    background: yellow
@@ -349,6 +254,7 @@ iframe
     height: 17%
     border: solid 5px white 
     zIndex: 0.1
+    display: block
 
 
 
@@ -404,7 +310,6 @@ iframe
         background: #00a8ff no-repeat center left
         border: 1px solid #fff
         border-radius: 50%
-        box-shadow: none
         color: transparent
         cursor: pointer
         line-height: 120px
@@ -414,19 +319,14 @@ iframe
         height: 90px
         top: 49%
         display: none
-
     .popup
         background: #F8F8F8
-        box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3)
-        border-radius: 0px 10px 10px 50px
-        padding: 20px
-        text-align: center
+        padding: 10px
         width: 70%
-        height: 85%
-        transition: .3s ease all
-        transform: scale(0.7)
-        /* opacity: 0; */
+        min-height: 85%
 
-    .modal-content 
-        left: 50px      
-       
+
+    /*.popup.active transform: scale(1) opacity: 1 width: 60% height: 50%*/
+
+
+    
