--- a/src/components/teacher/temporizador/temporizador.sass
+++ b/src/components/teacher/temporizador/temporizador.sass
@@ -3,6 +3,8 @@
   src: url(../../../plugins/clockicons.ttf) format("truetype")
   font-weight: 400
   font-style: normal
+#modal-temp
+  background: #00000033
 .temporizador
   text-align: center
   .counter_part
