grupos por socket

--- a/src/components/student/Header/headerStyles.sass
+++ b/src/components/student/Header/headerStyles.sass
@@ -1,5 +1,5 @@
 #header
-    z-index: 3000
+    z-index: 300
     height: 65px
 
 .primary-color
@@ -48,7 +48,10 @@
     &-dark .navbar-toggler
         color: rgba(255,255,255,.5)
         border-color: rgba(255,255,255,.1)
-
+.modal-xl
+    width: 800px
+.modal-lg
+    width: 600px
 @media (min-width: 992px)
         &-expand-lg .navbar-toggler
             display: none
