--- a/src/components/teacher/lista/lista.sass
+++ b/src/components/teacher/lista/lista.sass
@@ -66,17 +66,14 @@
     transform: translate(0, 0)
 
 .modal .modal-dialog 
-    margin-top: 10% !important
+    margin-top: 20% !important
 
 .modal.fade .modal-dialog 
     transition: transform 0.3s ease-out
     transform: translate(0, -25%)
 
-.modal-lg 
-    max-width: 500px
-
 .modal-dialog 
-    max-width: 500px
+    // max-width: 500px
     margin: 1.75rem auto
     position: relative
     width: auto
@@ -86,7 +83,7 @@
     position: relative
     display: flex
     flex-direction: column
-    width: 500px
+    // width: 500px
     min-height: 400px
     pointer-events: auto
     background-color: #ffffff
