--- a/src/components/teacher/header/HeaderCode.sass
+++ b/src/components/teacher/header/HeaderCode.sass
@@ -73,9 +73,32 @@
 #div_head 
     transition: margin-Right .7s
     margin-block-start: -17px
-    
-#modal-codigogenerado
-    font-size: 100px
+
+#modal-general
+    position: absolute
+    width: 542px
+    height: 175px
+    left: 430px
+    top: 40px
+    background: #fff
+    box-sizing: border-box
+    border-radius: 14px
+
+#modal-general__header
+    font-size: 30px
+    text-align: center
+
+.close
+    position: absolute
+    width: 40px
+    height: 32px
+    left: 435px
+    top: 20px
+    background: #E91E63
+    border-radius: 9px
+
+#modal-general__codigogenerado
+    font-size: 75px
 
 @media screen and (max-width: 800px)
     #menuToggle
