--- a/src/components/teacher/chat/test_2.css
+++ b/src/components/teacher/chat/test_2.css
@@ -439,12 +439,12 @@
  * Sass/SCSS source: https://goo.gl/1r6UDT
  * PSD by Aaron Sananes: https://goo.gl/AlBLzO
  */
-
+/* 
 body {
 	font: 12px/20px 'Lucida Grande', Verdana, sans-serif;
 	color: #404040;
 	background: #eee;
-  }
+  } */
   
   .widget {
 	position: relative;
