--- a/src/view/courses/Course.sass
+++ b/src/view/courses/Course.sass
@@ -126,3 +126,166 @@
         --logo-height: 5rem 
     .teacherCourses__main-menu__item:hover
         background: none
+
+.courseTeacher-container
+    display: flex
+    -webkit-display: box
+    -moz-display: box
+    -ms-display: flexbox
+    -webkit-display: flex
+    flex-wrap: wrap
+    padding: 0
+    margin: 0
+    background-color: #52BE7F
+  
+.courseTeacher-cards
+    display: flex
+    margin: 1rem
+    width: 100%
+    list-style: none
+    & .courseTeacher-card-item
+        display: flex
+        flex-direction: column
+        background-color: #FFFFFF
+        width: 100%
+        border-radius: 6px
+        box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25)
+        overflow: hidden
+        transition: transform 0.5s
+        -webkit-transition: transform 0.5s
+        text-decoration: none
+        text-align: center
+        color: black
+        height: 100%
+        &:hover
+            // cursor: pointer
+            transform: scale(1.1)
+            -webkit-transform: scale(1.03)
+            & .courseTeacher-card-image
+                opacity: 1
+    & .courseTeacher-card-info
+        display: flex
+        flex: 1 1 auto
+        flex-direction: column
+        padding: .25rem
+        align-items: center
+        & .courseTeacher-card-intro
+            font-size: 13px
+            height: 30%
+
+
+    & .courseTeacher-card-title
+        font-size: 20px
+        color: #32325d
+        height: 15%
+    & .courseTeacher-card-image
+        height: 180px
+        overflow: hidden
+        background-size: cover
+        background-position: center
+        background-repeat: no-repeat
+        border-radius: 6px 6px 0px 0px
+        opacity: 0.91
+        background-image: url('https://www.petdarling.com/articulos/wp-content/uploads/2016/04/nombres-de-gatos.jpg')
+
+@media (min-width: 640px)
+    .courseTeacher-cards 
+        width: 45%
+ 
+  
+@media (min-width: 896px)
+    .courseTeacher-cards 
+        width: 21%
+        height: 384px
+// se va a poner los estilos para los botones de los cards xd -- by:Miryan
+
+.courseTeacher__button-delette,
+.courseTeacher__button-Edit
+    min-width: 30px
+    max-width: 40px
+    border: 0
+    height: 30px
+    display: block
+    margin: .2em
+    border-radius: 5px
+    vertical-align: middle
+    position: relative
+    z-index: 1
+    width: 100%;
+    cursor: pointer
+    & .courseTeacher__img
+            transition: transform 0.3s ease-in-out;
+            -webkit-transition: all .4s ease;
+            -moz-transition: all .4s ease;
+            -o-transition: all .4s ease;
+            -ms-transition: all .4s ease;
+    &:hover .courseTeacher__img
+            // transform: scale(1.8)
+            // -webkit-transform: scale(1.3)
+            -webkit-transform: scale(1.25);
+            -moz-transform: scale(1.25);
+            -ms-transform: scale(1.25);
+            -o-transform: scale(1.25);
+            transform: scale(1.3)
+
+.courseTeacher__button-Edit
+    float: left
+    background-color: #FB9600
+    
+        
+.courseTeacher__button-delette
+    float: right
+    background-color: #E91E63
+    &:hover .courseTeacher__img
+        // transform: scale(1.8)
+        // -webkit-transform: scale(1.3)
+        -webkit-transform: scale(1.25);
+        -moz-transform: scale(1.25);
+        -ms-transform: scale(1.25);
+        -o-transform: scale(1.25);
+        transform: scale(1.25)
+.courseTeacher__buttonEntry
+    width: 100%
+    border: 0
+    height: 20%
+    display: block
+    margin: .2em
+    border-radius: 5px
+    vertical-align: middle
+    position: relative
+    z-index: 1
+    cursor: pointer
+    text-decoration: none
+    padding: .5rem
+    background-color: #52BE7F
+    &:hover
+        background-color: #52BE7F
+        color: white
+        padding: .5rem
+.courseTeacher-title
+    background-color: #51bd7e;
+    height: 50px;
+    margin: 0;
+    padding: 1rem;
+    text-align: center;
+    color: white
+.courseTeacher-title--class
+    background-color: #c72aa0;
+    height: 50px;
+    margin: 0;
+    padding: 1rem;
+    text-align: center;
+    color: white
+// @supports (display: grid) 
+// 	.courseTeacher-cards
+// 		display: grid;
+// 		grid-template-columns: repeat(auto-fit, minmax(24rem, 1fr));
+// 		grid-gap: 2rem;
+
+// 	.courseTeacher-container,
+// 	.courseTeacher-cards 
+// 		margin: 0;
+.courseTeacher-container .class
+    background-color: #e74c3c
+.main
+    height: 100vh
