Commit muy estable

--- a/src/components/teacher/header/HeaderCode.sass
+++ b/src/components/teacher/header/HeaderCode.sass
@@ -1,7 +1,7 @@
-#root
-    height: 100vh;
-    display: grid;
-    grid-template-rows: 55px 45px auto 40px;
+#main-teacher-container
+    height: 100vh
+    display: grid
+    grid-template-rows: 55px 45px auto 40px
     
 .Header-code__header
     background: #ffffff
