--- a/src/view/courses/Course.sass
+++ b/src/view/courses/Course.sass
@@ -136,7 +136,7 @@
     flex-wrap: wrap
     padding: 0
     margin: 0
-    background-color: #52BE7F
+    // background-color: #52BE7F
   
 .courseTeacher-cards
     display: flex
@@ -287,6 +287,9 @@
 // 		margin: 0;
 .courseTeacher-container .class
     background-color: #e74c3c
-.main
+.ClassTeacher-main
     height: 100vh
     background-color: #e74c3c
+.CourseTeacher-main
+    height: 100vh
+    background-color: #51bd7e
