--- a/src/components/teacher/header/Empatia.sass
+++ b/src/components/teacher/header/Empatia.sass
@@ -5,13 +5,13 @@
     div 
         flex-grow: 1
         margin: auto
-        padding: 10px
-        border-radius: 25px
-        cursor: pointer
         a   
-            margin: 0
+            cursor: pointer
+            border-radius: 25px
+            padding: 10px
             text-decoration: none
             color: #fff
+            display: block
             &:hover
                 background: white
                 color: #52BE7F
