--- a/src/components/teacher/header/HeaderCode.sass
+++ b/src/components/teacher/header/HeaderCode.sass
@@ -14,6 +14,8 @@
         display: flex
         .logo-img
             margin-left: 10px
+        .icon-img
+            margin: auto 0
     .code-detail
         width: 150px
         height: 45px
@@ -33,8 +35,10 @@
         font-size: 20px
         text-align: right
     .options
-        flex-grow: 1    
-        margin: auto
+        flex-grow: 0    
+        margin: 10px 18px
+        text-align: right
+
     #menuToggle
         display: none
         .check 
@@ -328,7 +332,7 @@
     .btn-setting
         right: 18px
         position: absolute
-        top: 8px
+        top: 10px
 @media screen and (max-width: 600px)
     #menuToggle
         display: block
