--- a/src/components/teacher/lista/lista.sass
+++ b/src/components/teacher/lista/lista.sass
@@ -86,7 +86,8 @@
     position: relative
     display: flex
     flex-direction: column
-    width: 500px
+    width: 100%
+    // width: 500px
     min-height: 400px
     pointer-events: auto
     background-color: #ffffff
@@ -122,7 +123,7 @@
     /* Agregar sombras para crear el efecto */
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2)
     transition: 0.3s
-    margin: 10px 100px
+    margin: 10px 50px
     padding: 10px
 
 .center 
@@ -575,6 +576,8 @@ table th[class*=col-]
     overflow-x: auto
 
 @media screen and (max-width:767px) 
+    .card
+        margin: 10px
     .table-responsive 
         width: 100%
         margin-bottom: 15px
