listo ingresar todo

--- a/src/view/courses/Course.sass
+++ b/src/view/courses/Course.sass
@@ -46,7 +46,7 @@
 .teacherCourses__main-nav
     position: fixed
     height: calc(100vh - 3rem)
-    width: 80vw
+    width: 50vw
     background: #141618
     top: 3rem
     right: -80vw
@@ -119,6 +119,7 @@
         padding-top: 0
         height: auto
         width: auto
+        
     .teacherCourses__main-menu-toggle
         display: none
     .teacherCourses__main-banner
@@ -143,6 +144,7 @@
     margin: 1rem
     width: 100%
     list-style: none
+    height: 371px
     & .courseTeacher-card-item
         display: flex
         flex-direction: column
@@ -191,6 +193,8 @@
 @media (min-width: 640px)
     .courseTeacher-cards 
         width: 45%
+    .CourseTeacher-main
+        height: 100% !important
  
   
 @media (min-width: 896px)
@@ -288,8 +292,8 @@
 .courseTeacher-container .class
     background-color: #e74c3c
 .ClassTeacher-main
-    height: 100vh
+    height: 55rem
     background-color: #e74c3c
 .CourseTeacher-main
-    height: 100vh
+    height: 55rem
     background-color: #51bd7e
