--- a/src/view/index/inicio.sass
+++ b/src/view/index/inicio.sass
@@ -9,7 +9,7 @@
     display: flex
     flex-direction: column
     width: 100%
-    height: 0%
+    height: 30%
 .login-iniciar-sesion
     align-items: center
     text-align: center
@@ -29,11 +29,11 @@
     flex-wrap: wrap
 
 .login-imagen-robot
-    position: absolute
-    width: 99%
-    display: flex
-    justify-content: center
-    align-items: center
+    position: absolute;
+    width: 99%;
+    display: flex;
+    justify-content: center;
+    height: 20%;
 
 .login-robot
     position: absolute
@@ -44,7 +44,7 @@
 
 .login-iniciar
     text-align: center
-    margin-block-start: 4em
+    margin-block-start: 3.5em;
     margin-block-end: 0.8em
     font-family: sans-serif !important
     font-size: 2em
@@ -196,7 +196,7 @@
 @media (max-width: 600px)
     .login-iniciar
         text-align: center
-        margin-block-start: 3.8em
+        margin-block-start: 2.8em
         margin-block-end: 0.4em
     .login-cuerpo
         min-width: 0
@@ -210,5 +210,9 @@
         margin-block-end: 0.4em
     .login-profesora
         margin-block-end: 0.4em
-    login-parents
+    .login-parents
         margin-block-end: 0.4em
+    .login-robot
+        position: absolute;
+        width: 100px;
+        height: 100px;
