--- a/src/view/login.Stud/ingresarCodigo.sass
+++ b/src/view/login.Stud/ingresarCodigo.sass
@@ -40,7 +40,7 @@
     display: block
     color: white
     text-align: center
-    padding: 21px 18px
+    padding: 10px 6px
     margin: 25px 25px
     font-size: 21px
     text-decoration: none !important
@@ -52,6 +52,8 @@
     .enter-code__changeStudent &
         // color: #2B4F95
         color: #ffffff
+    .enter-code__academy &
+        background-color: #ffffff87
 
 .enter-code__body
     width: 100%
@@ -64,9 +66,12 @@
     text-align: center
     font-family: Opal
     padding: 15px
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center
 
 .enter-code__tittle-body
-    color: #000000
+    color: #ffffff
     font-weight: 700
     font-size: 2em
 
@@ -79,6 +84,7 @@
 
 .enter-code__body-body
     margin-top: 5px
+    width: 50%
 
 .enter-code__button
     background: #333333
