cambios de la¿eandro actualizado

--- a/src/view/courses/Course.sass
+++ b/src/view/courses/Course.sass
@@ -193,8 +193,8 @@
 @media (min-width: 640px)
     .courseTeacher-cards 
         width: 45%
-    .CourseTeacher-main
-        height: 100% !important
+    // .CourseTeacher-main
+    //     height: 100% !important
  
   
 @media (min-width: 896px)
