--- a/src/components/teacher/header/HeaderCode.sass
+++ b/src/components/teacher/header/HeaderCode.sass
@@ -122,7 +122,7 @@
     transition: margin-Right .7s
     margin-block-start: -17px
 
-.modal-content
+.modal-general
     position: relative
     display: flex
     flex-direction: column
