--- a/src/view/login/login.sass
+++ b/src/view/login/login.sass
@@ -82,7 +82,8 @@
   -webkit-border-radius: 0px 100px 0px 0px
   padding-top: 5px
   padding-right: 20px
-
+.loginTeacher-message
+  color: green
 .card-login .form
   min-height: 380px
 
