--- a/src/view/login/login.css
+++ b/src/view/login/login.css
@@ -301,9 +301,13 @@
 }
 
  .loginTeacher-message{ 
-   color: white;
-   text-align: center;
-   background: red;
+  color: white;
+    text-align: center;
+    background: #E91E63;
+    height: 39px;
+    align-content: center;
+    padding: 10px;
+    font-size: 15px;
  }
 
  .loginTeacher-message-succefull{ 
