Commit muuy estable

--- a/src/components/teacher/header/Empatia.sass
+++ b/src/components/teacher/header/Empatia.sass
@@ -1,4 +1,7 @@
-
+#div_children
+    background: #F1F0F9
+    max-height: calc(100vh - 140px)
+    overflow-y: auto
 #Empatia-header
     background: #52BE7F
     display: flex
