--- a/src/components/teacher/lista/lista.sass
+++ b/src/components/teacher/lista/lista.sass
@@ -211,7 +211,7 @@
     text-align: center
 
 .table 
-    width:  1330px 
+    width:  100%
     border-spacing: 0
     border-collapse: collapse
     margin-left: 10px !important
