--- a/src/components/teacher/header/Empatia.sass
+++ b/src/components/teacher/header/Empatia.sass
@@ -4,18 +4,19 @@
     overflow-y: auto
 #Empatia-header
     background: #52BE7F
-    display: flex
     text-align: center
-    div 
-        flex-grow: 1
-        margin: auto
-        a   
-            cursor: pointer
-            border-radius: 25px
-            padding: 10px
-            text-decoration: none
-            color: #fff
-            display: block
-            &:hover
-                background: white
-                color: #52BE7F
+    .empatia-menu
+        display: flex
+        div 
+            flex-grow: 1
+            margin: auto
+            a   
+                cursor: pointer
+                border-radius: 25px
+                padding: 10px
+                text-decoration: none
+                color: #fff
+                display: block
+                &:hover
+                    background: white
+                    color: #52BE7F
