--- a/src/components/teacher/header/Empatia.sass
+++ b/src/components/teacher/header/Empatia.sass
@@ -7,6 +7,7 @@
     text-align: center
     .empatia-menu
         display: flex
+        height: 100%
         div 
             flex-grow: 1
             margin: auto
@@ -20,3 +21,9 @@
                 &:hover
                     background: white
                     color: #52BE7F
+
+@media  (max-width: 680px) 
+    #div_children
+        max-height: calc(100vh - 95px)
+    #Empatia-header 
+        display: none
