--- a/src/components/student/footer/footerStyles.sass
+++ b/src/components/student/footer/footerStyles.sass
@@ -14,8 +14,12 @@ footer.page-footer
 .fixed-footer
     position: fixed
     bottom: 0
-    width: 100%
+.slide-container
+    width: 200px
+    height: 30px
 
+
+    
 .font-small
     font-size: .9rem
 
