--- a/src/components/student/Header/headerStyles.sass
+++ b/src/components/student/Header/headerStyles.sass
@@ -1,7 +1,8 @@
 #header
     z-index: 300
     height: 65px
-
+.Toastify
+    position: fixed
 .primary-color
     background: -webkit-linear-gradient(left, #007bff, #5D00FF)!important
 
