--- a/src/components/teacher/header/HeaderCode.sass
+++ b/src/components/teacher/header/HeaderCode.sass
@@ -97,14 +97,26 @@
     margin-block-start: -17px
 
 #modal-teacher__general
-    position: absolute
+    position: relative
     width: 460px
     height: 215px
     pointer-events: auto
     background: #ffffff
-    top: -95px
     border-radius: 20px
-    left: 440px
+    transform: none !important
+    margin-top: 0 !important
+    top: 80px
+
+#modal-teacher__general2
+    position: relative
+    width: 460px
+    height: 400px
+    pointer-events: auto
+    background: #ffffff
+    border-radius: 20px
+    transform: none !important
+    margin-top: 0 !important
+    top: 80px
 
 .modal-header
     font-size: 30px
@@ -116,8 +128,8 @@
 .modal-title
     font-size: 1.25rem
     left: 18px
-    position: relative
     margin: 0
+    position: relative
     line-height: 1.4
     letter-spacing: .02em
 .close
@@ -128,7 +140,47 @@
     top: 10px
     background: #E91E63
     border-radius: 9px
+.modal-teacher__general-controlname
+    position: absolute
+    height: 48px
+    width: 300px
+    left: 80px
+    right: 364px
+    top: 28px
+    background: rgba(126, 121, 121, 0.22)
+    border: 1px solid #FFFFFF
+    box-sizing: border-box
+    border-radius: 8px
+#modal-title__teacher
 
+.modal-title__controlname
+    font-size: 1.25rem
+    left: -91px
+    margin: 0
+    position: relative
+    line-height: 1.4
+    letter-spacing: .02em
+    top: -20px
+.modal-title__controldescription
+    font-size: 1.25rem
+    left: -75px
+    margin: 0
+    position: relative
+    line-height: 1.4
+    letter-spacing: .02em
+    top: 30px
+.modal-teacher__general-controldescription
+    position: absolute
+    height: 120px
+    width: 300px
+    left: 80px
+    right: 364px
+    top: 109px
+    background: rgba(126, 121, 121, 0.22)
+    border: 1px solid #FFFFFF
+    box-sizing: border-box
+    border-radius: 8px
+    bottom: -28px
 .modal-body
     flex: 1 1 auto 
     position: relative
@@ -141,8 +193,6 @@
     margin-inline-end: 0
     margin-block-start: 0
     margin-block-end: 0
-
-    
 
 #modal-header__title-question
     position: absolute
@@ -187,6 +237,17 @@
     border-radius: 10px
     color: #fff
     font-size: 16px
+
+#modal-body__button-cursos2
+    position: relative
+    width: 175px
+    height: 50px
+    top: 170px
+    background: #FB9600
+    border-radius: 10px
+    color: #fff
+    font-size: 16px
+
 #modal-body__exit
     flex: 1 1 auto
     padding: 1.25rem 1.5rem
